# electronics_retail_chain

./: .env.sample  .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
fixtures/: auth_data.json  retail_data.json  users_data.json
retail/: admin.py  models.py  serializers.py  urls.py  views.py
retail/migrations/: 0001_initial.py  0002_company_type.py  0003_alter_company_debt.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
